add region selector

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 character deaths.
               </p>
               <img src="/static/images/battle.gif" alt="battle sceen" class="img-fluid" width="100%">
+              <!-- selector for region -->
+              <h3>Region Selector</h3>
+              <p><The region where the battle takes place. Categories: Beyond the Wall, The North, The Iron Islands, The Riverlands, The Vale
+              of Arryn, The Westerlands, The Crownlands, The Reach, The Stormlands, Dorne/p>
+              <div id="region_of_battle"></div>
             </div>
             <div class="col-md-4">
               <h3>Content</h3>
