add reload button for charts

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Game of Thones</a>
         </div>
+        <div id="reload-button">
+          <button type="submit" class="btn btn-success" onClick="reloadCharts()">Reload Charts
+          </button>
+        </div>
       </div>
     </nav>
     <header>
@@ -51,7 +55,9 @@
                 landscape, large number of characters, and its frequent
                 character deaths.
               </p>
+              <hr/>
               <img src="/static/images/battle.gif" alt="battle sceen" class="img-fluid" width="100%">
+              <hr/>
               <!-- selector for region -->
               <h3>Region Selector</h3>
               <p>The region where the battle takes place. Categories: Beyond the Wall, The North, The Iron Islands, The Riverlands, The Vale
