--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./static/images/favicon.ico" />
     <title>Game of Thrones</title>
-    <link rel="stylesheet" href="static/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./static/css/bootstrap.min.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="static/css/dc.min.css" />
+    <link rel="stylesheet" href="./static/css/dc.min.css" />
     <link
       rel="stylesheet"
       type="text/css"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="static/css/style.css" />
+    <link rel="stylesheet" href="./static/css/style.css" />
 
-    <script type="text/javascript" src="static/js/d3.min.js"></script>
-    <script type="text/javascript" src="static/js/crossfilter.min.js"></script>
-    <script type="text/javascript" src="static/js/dc.min.js"></script>
-    <script type="text/javascript" src="static/js/queue.min.js"></script>
-    <script type="text/javascript" src="static/js/graphs.js"></script>
+    <script type="text/javascript" src="./static/js/d3.min.js"></script>
+    <script type="text/javascript" src="./static/js/crossfilter.min.js"></script>
+    <script type="text/javascript" src="./static/js/dc.min.js"></script>
+    <script type="text/javascript" src="./static/js/queue.min.js"></script>
+    <script type="text/javascript" src="./static/js/graphs.js"></script>
   </head>
   <body>
     <!-- navigation bar -->
@@ -56,7 +56,7 @@
                 character deaths.
               </p>
               <hr/>
-              <img src="/static/images/battle.gif" alt="battle sceen" class="img-fluid" width="100%">
+              <img src="./static/images/battle.gif" alt="battle sceen" class="img-fluid" width="100%">
               <hr/>
               <!-- selector for region -->
               <h3>Region Selector</h3>
