--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     />
     <link rel="stylesheet" href="./static/css/style.css" />
     <script type="text/javascript" src="./static/js/d3.min.js"></script>
-    <script type="text/javascript" src="./static/js/crossfilter.min.js"></script>
+    <script
+      type="text/javascript"
+      src="./static/js/crossfilter.min.js"
+    ></script>
     <script type="text/javascript" src="./static/js/dc.min.js"></script>
     <script type="text/javascript" src="./static/js/queue.min.js"></script>
     <script type="text/javascript" src="./static/js/graphs.js"></script>
@@ -30,10 +33,6 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Game of Thones</a>
-        </div>
-        <div id="reload-button">
-          <button type="submit" class="btn btn-success" onClick="reloadCharts()">Reload Charts
-          </button>
         </div>
       </div>
     </nav>
@@ -46,6 +45,25 @@
           <h1 class="section-heading">Game of Thrones - Battles</h1>
           <div class="row">
             <div class="col-md-4">
+              <h3>Content</h3>
+              <p>
+                Of course, it goes without saying that this dataset contains
+                spoilers &#x1F609;
+              </p>
+              <p>
+                This dataset is based on information from the book series.
+              </p>
+              <p>Three great storylines weave through the books, charting the civil war for control of the Seven Kingdoms; the defence of
+              the towering Wall of ice in the uttermost north against the unearthly threat of the Others; and across the Narrow Sea the
+              rise to power of Daenerys Targaryen and the last live dragons in the world.</p>
+              <p>
+                The battles.csv which contains Chris Albon's "The War of the
+                Five Kings" Dataset. Its a great collection of all of the
+                battles in the series.
+              </p>
+            </div>
+
+            <div class="col-md-4">
               <h3>Context</h3>
               <p>
                 Game of Thrones is a hit fantasy tv show based on the equally
@@ -54,125 +72,135 @@
                 landscape, large number of characters, and its frequent
                 character deaths.
               </p>
-              <hr/>
-              <img src="./static/images/battle.gif" alt="battle sceen" class="img-fluid" width="100%">
-              <hr/>
-              <!-- selector for region -->
-              <h3>Region Selector</h3>
-              <p>The region where the battle takes place. Categories: Beyond the Wall, The North, The Iron Islands, The Riverlands, The Vale
-              of Arryn, The Westerlands, The Crownlands, The Reach, The Stormlands, Dorne</p>
-              <div id="region_of_battle"></div>
+              <hr>
+              <img
+                src="./static/images/battle.gif"
+                alt="battle sceen"
+                class="img-fluid"
+                width="100%"
+              />
             </div>
-            <div class="col-md-4">
-              <h3>Content</h3>
-              <p>
-                Of course, it goes without saying that this dataset contains
-                spoilers ;)
-              </p>
-              <p>
-                This dataset combines three sources of data, all of which are
-                based on information from the book series.
-              </p>
-              <ul>
-                <li>
-                  Firstly, there is battles.csv which contains Chris Albon's
-                  "The War of the Five Kings" Dataset. Its a great collection of
-                  all of the battles in the series.
-                </li>
-                <li>
-                  Secondly we have character-deaths.csv from Erin Pierce and Ben
-                  Kahle. This dataset was created as a part of their Bayesian
-                  Survival Analysis.
-                </li>
-                <li>
-                  Finally we have a more comprehensive character dataset with
-                  character-predictions.csv. It includes their predictions on
-                  which character will die.
-                </li>
-              </ul>
-              </div>
             <div class="col-md-4">
               <h3>Acknowledgements</h3>
-              <ul>
-                <li>
-                  Firstly, there is battles.csv which contains Chris Albon's
-                  "The War of the Five Kings" Dataset, which can be found here:
-                  https://github.com/chrisalbon/war_of_the_five_kings_dataset .
-                  Its a great collection of all of the battles in the series.
-                </li>
-                <li>
-                  Secondly we have character-deaths.csv from Erin Pierce and Ben
-                  Kahle. This dataset was created as a part of their Bayesian
-                  Survival Analysis which can be found here:
-                  http://allendowney.blogspot.com/2015/03/bayesian-survival-analysis-for-game-of.html
-                </li>
-                <li>
-                  Finally we have a more comprehensive character dataset with
-                  character-predictions.csv. This comes from the team at A Song
-                  of Ice and Data who scraped it from
-                  http://awoiaf.westeros.org/ . It also includes their
-                  predictions on which character will die, the methodology of
-                  which can be found here:
-                  https://got.show/machine-learning-algorithm-predicts-death-game-of-thrones
-                </li>
-              </ul>
-            </div>
-          </div>
-          <hr/>
-
-      <!-- section contains 3 x bar charts -->
-      <section class="section">
-        <div class="container">
-          <!-- button mid section to reload charts -->
-            <div id="reload-button">
-              <button type="submit" class="btn btn-success" onClick="reloadCharts()">Reload Charts
-              </button>
-            </div>
-          <div class="row">
-            <!-- title for Number of battles fought bar chart -->
-            <div class="col-xs-12 col-sm-4 text-center">
-              <h3 class="section-paragraph">
-                Number of battles fought over the years
-              </h3>
-              <p>Information is based over a 3 year period from 298 - 300</p>
-            </div>
-            <!-- title for Attacker House Size pie chart -->
-            <div class="col-xs-12 col-sm-4 text-center">
-              <h3>Attacker Size</h3>
-              <p>This pie chart to show the size of the house on the attack</p>
-            </div>
-            <!-- title for Defender House Size pie chart  -->
-            <div class="col-xs-12 col-sm-4 text-center">
-              <h3>Defender Size</h3>
-              <p>This pie chart to show the size of the house on the defensive</p>
+              <p>
+                The battles.csv which contains Chris Albon's "The War of the
+                Five Kings" Dataset, which can be found at:
+                <a
+                  href="https://github.com/chrisalbon/war_of_the_five_kings_dataset"
+                  >https://github.com/chrisalbon/war_of_the_five_kings_dataset</a
+                >
+                Its a great collection of all of the battles in the series.
+              </p>
+              <hr>
+              <!-- selector for region -->
+              <h3>Region Selector</h3>
+              <p>The region where the battle takes place. Categories: Beyond the Wall, The North, The Iron Islands, The Riverlands, The Valeof Arryn, The Westerlands, The Crownlands, The Reach, The Stormlands, Dorne</p>
+              <div id="region_of_battle"></div>
               </div>
             </div>
-          </div>
-
-          <div class="row">
-            <!-- bar chart battles found over 3 years -->
-            <div
-              class="col-xs-12 col-sm-4 text-center"
-              id="battles_fought"
-              class="custom-chart"
-            ></div>
-            <!-- pie chart for size of attackers -->
-            <div
-              class="col-xs-12 col-sm-4 text-center"
-              id="attacker_size"
-              class="custom-chart"
-            ></div>
-            <!-- pie chart for size of attackers -->
-            <div
-              class="col-xs-12 col-sm-4 text-center"
-              id="defender_size"
-              class="custom-chart"
-            ></div>
           </div>
         </div>
       </section>
+      <h3 class="data-tip">Click or hover on the charts to select data</h3>
+      <!-- section contains 3 x bar charts -->
+      <section class="section">
+        <div class="container">
+          <div class="row">
+            <!-- title for Number of battles fought bar chart -->
+            <div class="col-md-4">
+              <h3 class="section-paragraph">
+                Battles over the years
+              </h3>
+              <p>Information is based over a 3 year period from 298 - 300</p>
+              <!-- bar chart battles found over 3 years -->
+              <div id="battles_fought" class="custom-chart"></div>
+            </div>
+            <!-- title for Attacker House Size pie chart -->
+            <div class="col-md-4">
+              <h3 class="section-paragraph">Attacker Size</h3>
+              <p>
+                The size of the attacker's force. No distinction is made between
+                the types of soldiers such as cavalry and footmen
+              </p>
+              <!-- pie chart for size of attackers -->
+              <div id="attacker_size" class="custom-chart"></div>
+            </div>
+            <!-- title for Defender House Size pie chart  -->
+            <div class="col-md-4">
+              <h3 class="section-paragraph">Defender Size</h3>
+              <!-- pie chart for size of attackers -->
+              <p>
+                The size of the defenders's force. No distinction is made
+                between the types of soldiers such as cavalry and footmen
+              </p>
+              <div id="defender_size" class="custom-chart"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- button mid section to reload charts -->
+      <div id="reload-button" class="reload-btn">
+        <button type="submit" class="btn data-tip" onClick="reloadCharts()">
+        <h3>Click bar to reload charts</h3>
+        </button>
+      </div>
 
-      <!-- scatter graphs N0. 1 -->
+      <section class="section">
+        <div class="container">
+          <div class="row">
+
+            <div class="col-md-4">
+              <h3>Attacker King</h3>
+              <p>
+                 The attacker's king. A slash indicators that the king charges over the course of the war. For example, "Joffrey/Tommen Baratheon"
+                is coded as such because one king follows the other in the Iron Throne
+              </p>
+              <!-- pie chart for size of attacker king -->
+              <div id="attacker_king" class="custom-chart"></div>
+            </div>
+
+            <div class="col-md-4">
+              <h3>Defender King</h3>
+              <p>
+                 The defender's king. A slash indicators that the king charges over the course of the war. For example, "Joffrey/Tommen Baratheon"
+                is coded as such because one king follows the other in the Iron Throne
+              </p>
+              <!-- pie chart for size of defender king -->
+              <div id="defender_king" class="custom-chart"></div>
+            </div>
+
+            <!-- Bar Chart depicting type of attack -->
+            <div class="col-md-4">
+              <h3>Types of battle attack</h3>
+              <p>
+                A classification of the battle's primary type. Categories:
+                pitched_battle: Armies meet in a location and fight. This is
+                also the baseline category. ambush: A battle where stealth or
+                subterfuge was the primary means of attack. siege: A prolonged
+                of a fortied position. razing: An attack against an undefended
+                position
+              </p>
+              <!-- pie chart for size of attackers -->
+              <div id="battle-type" class="custom-chart"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- button mid section to reload charts -->
+    <div id="reload-button" class="reload-btn">
+      <button type="submit" class="btn data-tip" onClick="reloadCharts()">
+        <h3>Click bar to reload charts</h3>
+      </button>
+    </div>
+
+      <!-- id for house images with tooltip map -->
+      <section>
+        <div class="container">
+          <div class="row">
+              <div id="battle_by_house"></div>
+            </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div id="footer" class="copyright">
