add doughnut pie charts

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <h3>Click bar to reload charts</h3>
       </button>
     </div>
-
+    <div id="defender_king2"></div>
       <!-- id for house images with tooltip map -->
       <section>
         <div class="container">
