--- a/index.html
+++ b/index.html
@@ -186,11 +186,12 @@
       <section>
         <div class="container">
           <div class="row">
-            <h3>Every battle beteween major houses and groups. Hover the line for details.</h3>
+            <h3>Every battle between major houses and groups. Hover the line for details.</h3>
             <a href="https://jacqueline-walsh.github.io/game-of-thrones/">Click to open in new window</a>
             <iframe width="100%" height="1000" src="https://jacqueline-walsh.github.io/game-of-thrones/">
               <p>Your browser does not support iframes.</p>
             </iframe>
+            <p>Credit to:<a href="https://bl.ocks.org/bsullins/faf637290007a08703b11af8a22f1781">https://bl.ocks.org/bsullins</a></p>
           </div>
         </div>
       </section>
