--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
               Every battle between major houses and groups. Hover the line for
               details.
             </h3>
-            <a href="https://jacqueline-walsh.github.io/game-of-thrones/"
+            <a
+              href="https://jacqueline-walsh.github.io/game-of-thrones/"
+              target="_blank"
               >Click to open in new window</a
             >
             <!-- button mid section to reload charts -->
