--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
               width="100"
               height="1000"
               src="https://jacqueline-walsh.github.io/game-of-thrones/"
+              target="_blank"
             >
             </iframe>
             <p>
