responsive force layout

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
       </section>
-      <hr />
+      <hr>
       <h3 class="data-tip">
         Click or hover on the charts to select and analyse data
       </h3>
@@ -187,40 +187,34 @@
         <!-- end container-->
       </section>
       <!--end section-->
-      <hr />
+      <hr>
+
+
+
 
       <!-- id for house images with tooltip map -->
       <section>
         <div class="container">
           <div class="row">
-            <h3>
-              Every battle between major houses and groups. Hover the line for
-              details.
-            </h3>
-            <a
-              href="https://jacqueline-walsh.github.io/game-of-thrones/"
-              target="_blank"
-              >Click to open in new window</a
-            >
-            <!-- button mid section to reload charts -->
-            <div class="reload-btn">
-              <button type="submit" class="btn btn-sm" onClick="reloadCharts()">
-                reload charts
-              </button>
+            <div class="col-md-12">
+              <h3>Every battle between major houses and groups - Hover the line for details</h3>
+              <p class="mobile-view">For best experience it is recommended to view this layout on a desktop</p>
+              <a class="open-link" href="https://jacqueline-walsh.github.io/game-of-thrones/" target="_blank">Click to open in new window</a>
+
+              <!-- button mid section to reload charts -->
+              <div class="reload-btn">
+                <button type="submit" class="btn btn-sm" onClick="reloadCharts()">
+                  reload charts
+                </button>
+              </div>
+
+
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://jacqueline-walsh.github.io/game-of-thrones/" height="900"></iframe>
+              </div>
+
+              <p>Credit to:<a href="https://bl.ocks.org/bsullins/faf637290007a08703b11af8a22f1781">https://bl.ocks.org/bsullins</a></p>
             </div>
-            <iframe
-              width="100"
-              height="1000"
-              src="https://jacqueline-walsh.github.io/game-of-thrones/"
-              target="_blank"
-            >
-            </iframe>
-            <p>
-              Credit to:<a
-                href="https://bl.ocks.org/bsullins/faf637290007a08703b11af8a22f1781"
-                >https://bl.ocks.org/bsullins</a
-              >
-            </p>
           </div>
         </div>
       </section>
