style force layout

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
               </div>
 
 
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://jacqueline-walsh.github.io/game-of-thrones/" height="900"></iframe>
+              <div>
+                <iframe src="https://jacqueline-walsh.github.io/game-of-thrones/"></iframe>
               </div>
 
               <p>Credit to:<a href="https://bl.ocks.org/bsullins/faf637290007a08703b11af8a22f1781">https://bl.ocks.org/bsullins</a></p>
